# tschinz.github.io

./: .lycheeignore  404.html  CHANGELOG.md  CNAME  README.md  cliff.toml  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  justfile  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: action-mkdocs.yml
_extra/css/: extra.css
_extra/overrides/: 404.html  main.html
about/: credits.html  getting_started.html  howtodocument.html  index.html  license.html  privacy.html  tags.html
blog/: index.html
blog/archive/: 2024.html  2025.html
blog/category/: format.html  hello-world.html  llm.html  macros.html  print.html  println.html  rust.html  software-developement.html
coding/: index.html
coding/ahk/: index.html  key_definitions.html  tips_tricks.html
coding/c_cpp/: executionframework.html  index.html  linkerscript.html  syntax.html
coding/general/: index.html  performance.html
coding/licenses/: all_rights_reserved.html  glwts.html  index.html  mit.html  wtfpl.html
coding/python/: awesome_packages.html  datetime.html  docstring.html  examples.html  (+12 more)
computerscience/: index.html
docs/: index.md
hw/: index.html
multimedia/: index.html
os/: index.html
psychology/: communication.html  fastfriendprocedure.html  habits.html  happiness.html  index.html  leadership.html  learning.html  public-speaking.html  softskills.html
search/: search_index.js  search_index.json
security/: cybersecurity.html  gnupg.html  index.html  password.html  tor.html
tools/: index.html
(+383 files in other folders)
