[project]
name = "tschinz-github-io"
version = "4.1.0"
description = "Personal wiki knowledge base"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-caption>=1.3.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-material>=9.6.15",
    "mkdocs-pagenav-generator",
    "mkdocs-puml>=2.3.0",
    "mkdocs-rss-plugin>=1.17.3",
    "mkdocs-toggle-sidebar-plugin>=0.0.6",
]

[tool.uv.sources]
mkdocs-pagenav-generator = { git = "https://github.com/Andre601/mkdocs-pagenav-generator", rev = "acb5b1561695e8f69d67fda029779f40e4b0beef" }
